# Armadillo-based-numerical-method

./: CMakeLists.txt  README.md
include/: dxs.h  str.h  zsc_float.h
include/Ex1/: e1t1.h  e1t2.h  e1t3.h  e1t4.h  ex1.h
include/Ex2/: e2t1.h  e2t2.h  e2t3.h  e2t4.h  e2t5.h  e2t6.h  e2t7.h  e2t8.h
include/Ex3/: e3t1.h  e3t2.h  e3t3.h  e3t4.h
include/Ex4/: e4t1.h  e4t2.h  e4t3.h  e4t3_1.h  e4t4.h
include/Ex5/: e5t1.h  e5t2.h  e5t3.h
include/Ex6/: e6t1.h  e6t2.h
include/Qt/: inputmat.h  inputmatrowcol.h  matlabel.h  matwidget.h  showwidget.h  veclabel.h  vecwidget.h
src/: str2double.cpp
src/Ex1/: e1t1.cpp  e1t1.ui  e1t2.cpp  e1t2.ui  e1t3.cpp  e1t3.ui  e1t4.cpp  e1t4.ui  ex1.cpp
src/Ex2/: e2t1.cpp  e2t1.ui  e2t2.cpp  e2t2.ui  e2t3.cpp  e2t3.ui  e2t4.cpp  e2t4.ui  e2t5.cpp  e2t5.ui  e2t6.cpp  e2t6.ui  e2t7.cpp  e2t7.ui  e2t8.cpp  e2t8.ui
src/Ex3/: e3t1.cpp  e3t1.ui  e3t2.cpp  e3t2.ui  e3t3.cpp  e3t3.ui  e3t4.cpp  e3t4.ui
src/Ex4/: e4t1.cpp  e4t1.ui  e4t2.cpp  e4t2.ui  e4t3.cpp  e4t3.ui  e4t3_1.cpp  e4t3_1.ui  e4t4.cpp  e4t4.ui
src/Ex5/: e5t1.cpp  e5t1.ui  e5t2.cpp  e5t2.ui  e5t3.cpp  e5t3.ui
src/Ex6/: e6t1.cpp  e6t1.ui  e6t2.cpp  e6t2.ui
src/Qt/: mainwindow.cpp
src/Qt/input/: inputmat.cpp  inputmat.ui  inputmatrowcol.cpp  inputmatrowcol.ui
src/Qt/label/: matlabel.cpp  veclabel.cpp
src/Qt/widget/: matwidget.cpp  matwidget.ui  showwidget.cpp  showwidget.ui  vecwidget.cpp  vecwidget.ui
